Main Column Overflow Issues in Project Pages

--- a/css/main.scss
+++ b/css/main.scss
@@ -128,7 +128,11 @@ h1.home {
 #mainColumn
 {
 	width: 80%;
-	overflow-x: hidden;
+	overflow: hidden;
+	::-webkit-scrollbar { 
+    display: none; 
+	}
+
 	li {
 		max-height: 95vh;
 		margin-bottom: 60px;
@@ -168,6 +172,7 @@ li#details
 	width: 20%; height: auto;
 	right: 0;
 	margin-top: 0;
+	overflow-y: hidden;
 
 	font-size: .6em;
 	line-height: 1.5em;
